apps/home-assistant/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/persistent/home-assistant/config"
            server: 10.10.10.10
      hostNetwork: true
      containers:
        - name: home-assistant
          image: lscr.io/linuxserver/homeassistant:2023.7.1
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
