apps/home-assistant/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  serviceName: home-assistant
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/home-assistant/config"
            server: 10.10.20.10
      hostNetwork: true
      containers:
        - name: home-assistant
          image: lscr.io/linuxserver/homeassistant:2026.10.0-ls253@sha256:98ac8d6b47949ce24c6ad827b16f079bb12ca2233656bba3b81d411aff43d588
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
