apps/home-assistant/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
