apps/home-assistant/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-https
spec:
  hostnames:
    - ha.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: home-assistant-https
      namespace: home-assistant
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: home-assistant
          port: 80
          weight: 1
